Fix find path